Fix album tracklist disc title alignment.

--- a/src/styles/_playlist.styl
+++ b/src/styles/_playlist.styl
@@ -143,7 +143,7 @@
         .disc-number
           color $albumArtistColor
           font-size .9rem
-          padding-left 6.4rem
+          padding-left 5rem
         .track
           &:nth-child(odd)
             background-color rgba(white, .03)
